compiler/plc_parser/src/parser/tests/snapshots/plc_parser__parser__tests__control_parser_tests__case_statement_with_multiple_conditions.snap
---
source: src/parser/tests/control_parser_tests.rs
expression: statement
---
CaseStatement {
    selector: ReferenceExpr {
        kind: Member(
            Identifier {
                name: "StateMachine",
            },
        ),
        base: None,
    },
    case_blocks: [
        ConditionalBlock {
            condition: LiteralInteger {
                value: 1,
            },
            body: [
                ReferenceExpr {
                    kind: Member(
                        Identifier {
                            name: "x",
                        },
                    ),
                    base: None,
                },
            ],
        },
        ConditionalBlock {
            condition: LiteralInteger {
                value: 2,
            },
            body: [
                ReferenceExpr {
                    kind: Member(
                        Identifier {
                            name: "y",
                        },
                    ),
                    base: None,
                },
                ReferenceExpr {
                    kind: Member(
                        Identifier {
                            name: "yy",
                        },
                    ),
                    base: None,
                },
                ReferenceExpr {
                    kind: Member(
                        Identifier {
                            name: "yyy",
                        },
                    ),
                    base: None,
                },
            ],
        },
        ConditionalBlock {
            condition: LiteralInteger {
                value: 3,
            },
            body: [
                ReferenceExpr {
                    kind: Member(
                        Identifier {
                            name: "z",
                        },
                    ),
                    base: None,
                },
            ],
        },
    ],
    else_block: [],
}
