compiler/plc_parser/src/parser/tests/snapshots/plc_parser__parser__tests__control_parser_tests__case_statement_with_one_condition_with_trailling_comma.snap
---
source: src/parser/tests/control_parser_tests.rs
expression: statement
---
CaseStatement {
    selector: ReferenceExpr {
        kind: Member(
            Identifier {
                name: "StateMachine",
            },
        ),
        base: None,
    },
    case_blocks: [
        ConditionalBlock {
            condition: LiteralInteger {
                value: 1,
            },
            body: [
                ReferenceExpr {
                    kind: Member(
                        Identifier {
                            name: "x",
                        },
                    ),
                    base: None,
                },
            ],
        },
    ],
    else_block: [],
}
