compiler/plc_parser/src/parser/tests/snapshots/plc_parser__parser__tests__control_parser_tests__for_with_body_statement.snap
---
source: src/parser/tests/control_parser_tests.rs
expression: statement
---
ForLoopStatement {
    counter: ReferenceExpr {
        kind: Member(
            Identifier {
                name: "z",
            },
        ),
        base: None,
    },
    start: ReferenceExpr {
        kind: Member(
            Identifier {
                name: "x",
            },
        ),
        base: None,
    },
    end: ReferenceExpr {
        kind: Member(
            Identifier {
                name: "y",
            },
        ),
        base: None,
    },
    by_step: None,
    body: [
        ReferenceExpr {
            kind: Member(
                Identifier {
                    name: "x",
                },
            ),
            base: None,
        },
        ReferenceExpr {
            kind: Member(
                Identifier {
                    name: "y",
                },
            ),
            base: None,
        },
    ],
}
