compiler/plc_parser/src/parser/tests/snapshots/plc_parser__parser__tests__control_parser_tests__if_else_statement_with_expressions.snap
---
source: src/parser/tests/control_parser_tests.rs
expression: statement
---
IfStatement {
    blocks: [
        ConditionalBlock {
            condition: LiteralBool {
                value: true,
            },
            body: [
                ReferenceExpr {
                    kind: Member(
                        Identifier {
                            name: "x",
                        },
                    ),
                    base: None,
                },
            ],
        },
    ],
    else_block: [
        ReferenceExpr {
            kind: Member(
                Identifier {
                    name: "y",
                },
            ),
            base: None,
        },
    ],
}
