compiler/plc_parser/src/parser/tests/snapshots/plc_parser__parser__tests__control_parser_tests__while_with_body_statement.snap
---
source: src/parser/tests/control_parser_tests.rs
expression: statement
---
WhileLoopStatement {
    condition: LiteralBool {
        value: true,
    },
    body: [
        ReferenceExpr {
            kind: Member(
                Identifier {
                    name: "x",
                },
            ),
            base: None,
        },
        ReferenceExpr {
            kind: Member(
                Identifier {
                    name: "y",
                },
            ),
            base: None,
        },
    ],
}
